force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/LLC_BI__Spread_Statement_Type__c.object-meta.xml
<CustomObject>
    <label>Spread Statement Template</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Spread Statement Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Statement Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>