force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Allow_Record_Filtering__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Allow_Record_Filtering__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is optional. It is populated through the Salesforce layout. When enabled, spread statement records (chart of accounts) can be filtered when a group header is clicked on. When disabled, the filter does not appear. By default, this is disabled.</description>
    <inlineHelpText>If checked, a search box is showed for every grid allowing row contents to be filtered.</inlineHelpText>
    <label>Allow Record Filtering</label>
    <type>Checkbox</type>
</CustomField>