force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Calc_Common_Sizing_Record__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Calc_Common_Sizing_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and automatically updated. The Spread_Statement_Record__c used as the divisor when calculating common sizing.</description>
    <label>Calc Common Sizing Record</label>
    <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
    <relationshipLabel>Spread Statement Templates</relationshipLabel>
    <relationshipName>Spread_Statement_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>