force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Calc_Common_Sizing_Total_Group__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Calc_Common_Sizing_Total_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and is user updated. The value to use as the denominator when calculating common sizing.</description>
    <label>Calc Common Sizing Total Group</label>
    <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
    <relationshipLabel>Spread Statement Templates (Calc Common Sizing Total Group)</relationshipLabel>
    <relationshipName>Spread_Statement_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>