force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Display_Common_Sizing__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Display_Common_Sizing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is driven by user selection within the spreading application. When enabled, common sizing columns are displayed for the spread statement. When disabled, the common sizing columns are not displayed. By default, this is disabled.</description>
    <label>Display Common Sizing</label>
    <type>Checkbox</type>
</CustomField>