force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__End_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__End_Date__c</fullName>
    <description>This field is currently not being used</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>