force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Interaction__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interaction__c</fullName>
    <description>Deprecated. All spread statements use keyboard interaction.</description>
    <inlineHelpText>The method used for interacting with the spread statement.</inlineHelpText>
    <label>-D Interaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>click</fullName>
            </value>
            <value>
                <fullName>dblclick</fullName>
            </value>
            <value>
                <fullName>keyboard</fullName>
                <default>true</default>
                <label>keyboard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>