force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Is_Income_Statement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Income_Statement__c</fullName>
    <description>This field is currently not being used</description>
    <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Income Statement&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Income Statement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>