force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Is_Multi_Currency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Multi_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional checkbox to indicate that the Spread Statement is multi-currency. By default, this field is deselected.</description>
    <label>Is Multi-Currency</label>
    <type>Checkbox</type>
</CustomField>