force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Is_Personal_Financial_Statement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Personal_Financial_Statement__c</fullName>
    <description>This field is used to mark the Personal Financial Statement.  When true, the changes to Periods on the Spread Statement will be made independently of other statements.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Personal Financial Statement&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Personal Financial Statement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>