force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Template__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is required. It must be manually populated. When enabled, the spread statement type is treated as a template and can be used to clone additional spread statement types. When disabled, it cannot be used to clone additional spread statement types. If its parent &quot;LLC_BI__Underwriting_Bundle__c&quot; is marked as a template, then the spread statement type is also a template. By default, this is disabled.</description>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>