force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sort_Order__c</fullName>
    <description>This field is required and automatically updated. The order for displaying the statements in the navigation bar when underwriting.</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>