force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Source_Statement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system auto-populates this optional lookup field with the id of the cloned Statement from the Spreads Statement Template template.</description>
    <label>Source Statement</label>
    <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
    <relationshipLabel>Cloned Spread Statement Templates</relationshipLabel>
    <relationshipName>Cloned_Spread_Statement_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>