force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Spread_Statement_Total_Group__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Total_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is currently not being used</description>
    <label>Spread Statement Total Group</label>
    <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
    <relationshipLabel>Spread Statement Templates</relationshipLabel>
    <relationshipName>Spread_Statement_Types</relationshipName>
    <type>Lookup</type>
</CustomField>