force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Start_Date_Quarter__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Start_Date_Quarter__c</fullName>
    <description>This field is currently not being used</description>
    <formula>If(Month(LLC_BI__Start_Date__c) &lt;= 3, 1, IF(Month(LLC_BI__Start_Date__c) &lt;= 6, 2, IF(Month(LLC_BI__Start_Date__c) &lt;= 9, 3,4)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>