force-app/main/default/objects/LLC_BI__Spread_Statement_Type__c/fields/LLC_BI__Static_Periods__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Static_Periods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and manually updated. If set then periods cannot be added after the initial creation of the statement.</description>
    <label>Static Periods</label>
    <type>Checkbox</type>
</CustomField>